--- a/TODO.TXT
+++ b/TODO.TXT
@@ -1,7 +1,10 @@
 1) MENU ON MOUSE ENTER & MOUSE LEAVE ANIMATIONS
-2) 4 scrolling texts,
-   make responsive,
-   make not shitty hahah omg looks soo bad
-3) footer - div scrolls to be 100% of page
-4) img scroll section, background color change, pair with img!
+2) 4 scrolling texts, make responsive?
+3) Responsive changes across site
+  footer
+  scrolling
+  inbetween footer/scrollling
+  img scroll
+  title section
 5) header main background
+6) FOOTER: Tell us about it animation
