--- a/TODO.TXT
+++ b/TODO.TXT
@@ -1,10 +1,6 @@
 1) MENU ON MOUSE ENTER & MOUSE LEAVE ANIMATIONS
-2) 4 scrolling texts, make responsive?
 3) Responsive changes across site
-  footer
-  scrolling
-  inbetween footer/scrollling
   img scroll
-  title section
-5) header main background
+5 MAYBE) header main background
 6) FOOTER: Tell us about it animation
+7) fix broken animation on title 'APPS'
